-- default with no args is not to start GUI...   -- added writechk, which verifies each write by reading ack. bytes.   -- added start address for binary write dialog.   -- changed obmf to obmf.py to make windows able to find python to run it.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,9 +1,17 @@
 
 TODO:
- -- does not check return status of Key commands.
- 
+  -- some sort of callback for GUI message posting? 
+     (writechk just prints errors to stdout...)
+
 
 Done:
+
+2010/08/22:
+  -- check return status of all record writes.
+  -- another dialog to specify start address for bulk xfers.
+  -- default command now is to start GUI.
+
+2010/08/21:
   -- encode binary in intelhex binary format.
   -- transliterate .hex into binary format.
   -- sends them one a a time waiting for successful receipt. signal.
