--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,36 @@
 
 TODO:
-  -- some sort of callback for GUI message posting? 
-     (writechk just prints errors to stdout...)
+  -- have protocol for drawing in the char window.
+  -- have programmable length of log window, for now it just fills up memory
+  -- have font selection fill window in char display
+  -- have Testing toggle for acknowledgements.
+  -- have toggle buttons visually confirm state.
+
+PC -> Z80
+xx \0a  ->
+               00 -ok pas de changement d'etat.
+               01 -erreur
+              128 -ok, changement de statut suit.
+                   
+telecom:
+    compteurs... 16 bit... en milliemes.
 
 
 Done:
+  -- send arbitrary byte (dialog)
+  -- one big fixed window.
+  -- compteur x, y, z.   absolut et relative.
+  -- 20x48 character display.
+
+  compteurs:
+    ax, ay, az       -  01, 02, 03
+    relx, rely, relz -  04, 05, 06
+
+  -- GUI exposure of writechk.
+     (writechk just prints errors to stdout...)
+     see status messages at bottom of app window.
+
+
 
 2010/08/22:
   -- check return status of all record writes.
