--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -25,8 +25,10 @@ unknown/WILL NOT DO:
      integer counters. 
 
 
-
 DONE:
+
+
+2010/09/18:
   -- have toggle buttons visually confirm state.
   -- make protocol symmetrical
        -- rx register setting
@@ -37,7 +39,7 @@ DONE:
   -- have protocol for drawing in the char window.
   -- have it work with sockets, and have two bmf's talk to eachother.
   -- get on github. need public ssh key for that.
-  -- send multiple arbitrary bytes.
+  -- send multiple arbitrary bytes (>1)
   -- have Settings dialog work.
 
 
