-- clear autorepeat from connect button.  -- added clear screen function.     x=ff & y=ff triggers clear screen.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,8 @@
 TODO:
+  -- clear screen command in Testing.
+  -- remove autorepeat from Connect.
+  -- disconnect.
+  -- subtract Acks?  Do we need them?
   -- add LEDS?
   -- have routine updates make radiobuttons symmetrical.
   -- make protocol symmetrical
