added chksum validation on receipt. should trigger resends when appropriate, but over a local socket, that would be never.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,7 @@
 
+WORKING ON:
+  -- verification receipt of intel-hex records.
+
 TODO:
   -- bug: click on flags causes value change...
   -- decimal in counters.
