Bugfixes for filename handling.          -- only 1st char was read on receipt of filename.          -- debug print formatting error.          -- added filename to client side to enable testing.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -23,6 +23,7 @@ TODO:
   -- have toggles stay depressed when appropriiate.
 
 2010/10/17:
+  -- bug-fixes to file sending (name handling was mangling them.)
   -- added leds and labels to the loopback tests.
   -- determined that neither worked, bugfixed.
 
