--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,6 +3,8 @@ WORKING ON:
   -- logfile support not general yet.
 
 TODO:
+
+  -- declarative UI? or CSS or ...
   -- Align Right labels...
   -- Replace literal op-codes with consants OC_
   -- add file name to BLOCK send...
@@ -22,6 +24,16 @@ TODO:
        -- Acks are not generated, current flag does nothing in app.
   -- have routine updates make radiobuttons symmetrical.
   -- have toggles stay depressed when appropriiate.
+
+
+Done:
+  -- added return binding for faster hex code send testing.
+  -- bound 2f key to sendfile function (functionality lost in panel reset...)
+  -- separate self-test function from normal stuff.
+
+
+2010/11/11:
+  -- bugfixes to label setting, added utf-8 support for strings.
 
 2010/11/06:
   -- 2x 16 key pads, programmed with set string op-code.
