--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,7 +7,6 @@ TODO:
   -- declarative UI? or CSS or ...
   -- Align Right labels...
   -- Replace literal op-codes with consants OC_
-  -- add file name to BLOCK send...
   -- set cwd ?
   -- bug: click on flags causes value change...
   -- decimal in counters.
@@ -25,6 +24,10 @@ TODO:
 
 
 
+
+2010/11/28:
+  -- pad with only NULS.
+  -- removed h/w flow control (added before undocumented.)
 
 2010/11/27:
   -- added "natural" flow control, requires an ack for each key press,
