Modified for 0x82 keypress protocol change. some other typo fixes.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,11 @@ WORKING ON:
 
 TODO:
 
+  -- implement new opcode 82.
+  -- save keyboard positions and settings.
+  -- variable interval...
+       auto repeat slow at first...
+       then faster later.
   -- declarative UI? or CSS or ...
   -- Align Right labels...
   -- Replace literal op-codes with consants OC_
