Added Font Selection to character mapped display. Added test with graphical characters, because some unicode fonts that claim to be monospaced, do not appear to actually be so.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,7 @@ WORKING ON:
 
 TODO:
 
+  -- add mouseevents in char display.
   -- logfile support not general yet.
   -- GUI save/restore bug: doesn't seem to save/restore the size of the main window?
   -- declarative UI? or CSS or ...
